Fix wrong color variabe

--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -11,8 +11,7 @@
     &:focus,
     &:active {
       color: var(--default-color);
-      border-color: var(--purple-color);
-
+      border-color: var(--dark-purple-color);
     }
   }
 }
